--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "Aniket Baghel",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.16.4",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^6.11.2"
   }
 }
