--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "Aniket Baghel",
   "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^5.0.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.11.2"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.11.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
