--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "author": "Aniket Baghel",
   "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^3.2.0",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
-    "mongoose": "^6.11.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
