--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "Aniket Baghel",
   "license": "ISC",
   "dependencies": {
-    "connect-mongo": "^2.0.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.1",
-    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
